examples/ok/cramer_shoup_correct.zc
../all/cramer_shoup_correct.zc