examples/fail/cpa_matrix_scasc.zc
../all/cpa_matrix_scasc.zc